Implement "Classes" koans

--- a/Kotlin Koans/Classes/Rename on import/task-info.yaml
+++ b/Kotlin Koans/Classes/Rename on import/task-info.yaml
@@ -5,7 +5,7 @@ files:
   visible: true
   placeholders:
   - offset: 0
-    length: 57
+    length: 73
     placeholder_text: |-
       // import kotlin.random.Random
       // import java.util.Random
@@ -16,28 +16,28 @@ files:
     possible_answer: |-
       import kotlin.random.Random as KRandom
       import java.util.Random as JRandom
-    selected: false
-    status: Unchecked
-  - offset: 144
-    length: 23
+    selected: true
+    status: Solved
+  - offset: 160
+    length: 20
     placeholder_text: // KRandom.nextInt(2) +
     initial_state:
       length: 23
       offset: 144
     initialized_from_dependency: false
     possible_answer: KRandom.nextInt(2) +
-    selected: false
-    status: Unchecked
-  - offset: 210
-    length: 25
+    selected: true
+    status: Solved
+  - offset: 223
+    length: 22
     placeholder_text: // JRandom().nextInt(2) +
     initial_state:
       length: 25
       offset: 210
     initialized_from_dependency: false
     possible_answer: JRandom().nextInt(2) +
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |-
     // import kotlin.random.Random
     // import java.util.Random
@@ -66,5 +66,5 @@ files:
         }
     }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
