Solve some koans in "Conventions"

--- a/Kotlin Koans/Conventions/Operators overloading/task-info.yaml
+++ b/Kotlin Koans/Conventions/Operators overloading/task-info.yaml
@@ -5,7 +5,7 @@ files:
   visible: true
   placeholders:
   - offset: 192
-    length: 69
+    length: 473
     placeholder_text: 'operator fun MyDate.plus(timeInterval: TimeInterval): MyDate
       = TODO()'
     initial_state:
@@ -23,10 +23,10 @@ files:
 
       operator fun MyDate.plus(timeIntervals: RepeatedTimeInterval) =
               addTimeIntervals(timeIntervals.timeInterval, timeIntervals.number)
-    selected: false
-    status: Unchecked
-  - offset: 371
-    length: 64
+    selected: true
+    status: Solved
+  - offset: 775
+    length: 44
     placeholder_text: TODO("Uncomment") //return today + YEAR * 2 + WEEK * 3 + DAY
       * 5
     initial_state:
@@ -34,8 +34,8 @@ files:
       offset: 371
     initialized_from_dependency: false
     possible_answer: return today + YEAR * 2 + WEEK * 3 + DAY * 5
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     import TimeInterval.*
 
@@ -105,5 +105,5 @@ files:
         }
     }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
