--- a/Kotlin Koans/Conventions/Invoke/task-info.yaml
+++ b/Kotlin Koans/Conventions/Invoke/task-info.yaml
@@ -5,7 +5,7 @@ files:
   visible: true
   placeholders:
   - offset: 123
-    length: 6
+    length: 41
     placeholder_text: TODO()
     initial_state:
       length: 6
@@ -14,8 +14,8 @@ files:
     possible_answer: |-
       numberOfInvocations++
               return this
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     class Invokable {
         var numberOfInvocations: Int = 0
@@ -52,5 +52,5 @@ files:
         }
     }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
