--- a/Kotlin Koans/Collections/Filter map/task-info.yaml
+++ b/Kotlin Koans/Collections/Filter map/task-info.yaml
@@ -5,25 +5,25 @@ files:
   visible: true
   placeholders:
   - offset: 106
-    length: 6
+    length: 50
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 106
     initialized_from_dependency: false
     possible_answer: customers.map { it.city }.toSet()
-    selected: false
-    status: Unchecked
-  - offset: 223
-    length: 6
+    selected: true
+    status: Solved
+  - offset: 267
+    length: 36
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 223
     initialized_from_dependency: false
     possible_answer: customers.filter { it.city == city }
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     // Find all the different cities the customers are from
     fun Shop.getCustomerCities(): Set<City> =
@@ -143,5 +143,5 @@ files:
             Tokyo to listOf(asuka)
     ).mapValues { it.value.map { name -> customers[name] } }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
