--- a/Kotlin Koans/Collections/Introduction/task-info.yaml
+++ b/Kotlin Koans/Collections/Introduction/task-info.yaml
@@ -5,15 +5,15 @@ files:
   visible: true
   placeholders:
   - offset: 54
-    length: 6
+    length: 17
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 54
     initialized_from_dependency: false
     possible_answer: customers.toSet()
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     fun Shop.getSetOfCustomers(): Set<Customer> =
             TODO()
@@ -122,5 +122,5 @@ files:
             Tokyo to listOf(asuka)
     ).mapValues { it.value.map { name -> customers[name] } }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
