--- a/Kotlin Koans/Collections/GroupBy/task-info.yaml
+++ b/Kotlin Koans/Collections/GroupBy/task-info.yaml
@@ -4,16 +4,16 @@ files:
 - name: src/Task.kt
   visible: true
   placeholders:
-  - offset: 133
-    length: 6
+  - offset: 125
+    length: 37
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 133
     initialized_from_dependency: false
     possible_answer: customers.groupBy { it.city }
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     // Build a map that stores the customers living in a given city
     fun Shop.groupCustomersByCity(): Map<City, List<Customer>> =
@@ -123,5 +123,5 @@ files:
             Tokyo to listOf(asuka)
     ).mapValues { it.value.map { name -> customers[name] } }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
