--- a/Kotlin Koans/Collections/Sum/task-info.yaml
+++ b/Kotlin Koans/Collections/Sum/task-info.yaml
@@ -5,7 +5,7 @@ files:
   visible: true
   placeholders:
   - offset: 132
-    length: 6
+    length: 102
     placeholder_text: TODO()
     initial_state:
       length: 6
@@ -13,8 +13,8 @@ files:
     initialized_from_dependency: false
     possible_answer: customer.orders.flatMap { it.products }.sumByDouble { it.price
       }
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     // Return the sum of prices for all the products ordered by a given customer
     fun moneySpentBy(customer: Customer): Double =
@@ -130,5 +130,5 @@ files:
             Tokyo to listOf(asuka)
     ).mapValues { it.value.map { name -> customers[name] } }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
