--- a/Kotlin Koans/Collections/FlatMap/task-info.yaml
+++ b/Kotlin Koans/Collections/FlatMap/task-info.yaml
@@ -5,25 +5,25 @@ files:
   visible: true
   placeholders:
   - offset: 113
-    length: 6
+    length: 30
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 113
     initialized_from_dependency: false
     possible_answer: orders.flatMap(Order::products)
-    selected: false
-    status: Unchecked
-  - offset: 241
-    length: 6
+    selected: true
+    status: Solved
+  - offset: 265
+    length: 218
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 241
     initialized_from_dependency: false
     possible_answer: customers.flatMap(Customer::getOrderedProducts).toSet()
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     // Return all products the given customer has ordered
     fun Customer.getOrderedProducts(): List<Product> =
@@ -143,5 +143,5 @@ files:
             Tokyo to listOf(asuka)
     ).mapValues { it.value.map { name -> customers[name] } }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
