--- a/Kotlin Koans/Collections/Getting used to new style/task-info.yaml
+++ b/Kotlin Koans/Collections/Getting used to new style/task-info.yaml
@@ -5,35 +5,35 @@ files:
   visible: true
   placeholders:
   - offset: 137
-    length: 6
+    length: 8
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 137
     initialized_from_dependency: false
     possible_answer: s.length
-    selected: false
-    status: Unchecked
-  - offset: 213
-    length: 6
+    selected: true
+    status: Solved
+  - offset: 215
+    length: 10
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 213
     initialized_from_dependency: false
     possible_answer: group.size
-    selected: false
-    status: Unchecked
-  - offset: 285
-    length: 6
+    selected: true
+    status: Solved
+  - offset: 351
+    length: 32
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 285
     initialized_from_dependency: false
     possible_answer: group.size == maximumSizeOfGroup
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     fun doSomethingWithCollection(collection: Collection<String>): Collection<String>? {
 
@@ -79,5 +79,5 @@ files:
         }
     }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
