--- a/Kotlin Koans/Properties/Delegates how it works/task-info.yaml
+++ b/Kotlin Koans/Properties/Delegates how it works/task-info.yaml
@@ -5,25 +5,25 @@ files:
   visible: true
   placeholders:
   - offset: 302
-    length: 6
+    length: 97
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 302
     initialized_from_dependency: false
     possible_answer: return timeInMillis!!.toDate()
-    selected: false
-    status: Unchecked
-  - offset: 403
-    length: 6
+    selected: true
+    status: Solved
+  - offset: 494
+    length: 31
     placeholder_text: TODO()
     initial_state:
       length: 6
       offset: 403
     initialized_from_dependency: false
     possible_answer: timeInMillis = value.toMillis()
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |+
     import kotlin.properties.ReadWriteProperty
     import kotlin.reflect.KProperty
@@ -83,5 +83,5 @@ files:
         }
     }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
