--- a/Kotlin Koans/Properties/Lazy property/task-info.yaml
+++ b/Kotlin Koans/Properties/Lazy property/task-info.yaml
@@ -4,18 +4,18 @@ files:
 - name: src/Task.kt
   visible: true
   placeholders:
-  - offset: 53
-    length: 10
+  - offset: 49
+    length: 34
     placeholder_text: /* TODO */
     initial_state:
       length: 10
       offset: 53
     initialized_from_dependency: false
     possible_answer: 'var value: Int? = null'
-    selected: false
-    status: Unchecked
-  - offset: 110
-    length: 6
+    selected: true
+    status: Solved
+  - offset: 189
+    length: 50
     placeholder_text: TODO()
     initial_state:
       length: 6
@@ -26,8 +26,8 @@ files:
                       value = initializer()
                   }
                   return value!!
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     class LazyProperty(val initializer: () -> Int) {
         /* TODO */
@@ -65,5 +65,5 @@ files:
         }
     }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
