Solve koans from "Builders"

--- a/Kotlin Koans/Builders/Html builders/task-info.yaml
+++ b/Kotlin Koans/Builders/Html builders/task-info.yaml
@@ -58,17 +58,17 @@ files:
   visible: true
   placeholders:
   - offset: 83
-    length: 10
+    length: 17
     placeholder_text: /* TODO */
     initial_state:
       length: 10
       offset: 83
     initialized_from_dependency: false
     possible_answer: (color = getTitleColor())
-    selected: false
-    status: Unchecked
-  - offset: 389
-    length: 6
+    selected: true
+    status: Solved
+  - offset: 392
+    length: 557
     placeholder_text: TODO()
     initial_state:
       length: 6
@@ -88,8 +88,8 @@ files:
                           }
                       }
                   }
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     fun renderProductTable(): String {
         return html {
@@ -182,5 +182,5 @@ files:
 - name: task.md.wb
   visible: false
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
