--- a/Kotlin Koans/Builders/The function apply/task-info.yaml
+++ b/Kotlin Koans/Builders/The function apply/task-info.yaml
@@ -4,8 +4,8 @@ files:
 - name: src/Task.kt
   visible: true
   placeholders:
-  - offset: 44
-    length: 6
+  - offset: 40
+    length: 24
     placeholder_text: TODO()
     initial_state:
       length: 6
@@ -14,8 +14,8 @@ files:
     possible_answer: |-
       f()
           return this
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     fun <T> T.myApply(f: T.() -> Unit): T {
         TODO()
@@ -68,5 +68,5 @@ files:
         }
     }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
