--- a/Kotlin Koans/Generics/Generic functions/task-info.yaml
+++ b/Kotlin Koans/Generics/Generic functions/task-info.yaml
@@ -5,7 +5,7 @@ files:
   visible: true
   placeholders:
   - offset: 20
-    length: 26
+    length: 312
     placeholder_text: fun partitionTo() = TODO()
     initial_state:
       length: 26
@@ -22,8 +22,8 @@ files:
           }
           return Pair(first, second)
       }
-    selected: false
-    status: Unchecked
+    selected: true
+    status: Solved
   text: |
     import java.util.*
 
@@ -71,5 +71,5 @@ files:
         }
     }
   learner_created: false
-status: Unchecked
+status: Solved
 record: -1
